--- a/ROFLCopterSS/ROFLCopterSS.csproj
+++ b/ROFLCopterSS/ROFLCopterSS.csproj
@@ -59,6 +59,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ROFLCopter.cs" />
     <Page Include="Blackout.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
