Endret build path og la til copy til .scr

--- a/ROFLCopterSS/ROFLCopterSS.csproj
+++ b/ROFLCopterSS/ROFLCopterSS.csproj
@@ -28,7 +28,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\..\..\Program Files\ROFLCopterSS\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -110,4 +110,7 @@
     <Resource Include="roflcropped.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy "$(TargetFileName)" "$(TargetName).scr" /y</PostBuildEvent>
+  </PropertyGroup>
 </Project>
