--- a/ROFLCopterSS/ROFLCopterSS.csproj
+++ b/ROFLCopterSS/ROFLCopterSS.csproj
@@ -74,6 +74,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Missile.cs" />
     <Compile Include="ROFLCopter.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="SettingsWindow.xaml.cs">
