Ingen missile på siste 3.del, screenshot.png

--- a/ROFLCopterSS/ROFLCopterSS.csproj
+++ b/ROFLCopterSS/ROFLCopterSS.csproj
@@ -149,10 +149,12 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy "$(TargetFileName)" "$(TargetName).scr" /y
+if $(ConfigurationName) == Debug goto :exit
 del WpfAnimatedGif.xml
 del "$(TargetFileName)"
 del "$(TargetFileName)".config
-</PostBuildEvent>
+
+:exit</PostBuildEvent>
   </PropertyGroup>
   <Import Project="..\packages\Fody.6.0.0\build\Fody.targets" Condition="Exists('..\packages\Fody.6.0.0\build\Fody.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
