--- a/ROFLCopterSS/ROFLCopterSS.csproj
+++ b/ROFLCopterSS/ROFLCopterSS.csproj
@@ -80,6 +80,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ParentProcessUtilities.cs" />
     <Compile Include="Models\Missile.cs" />
     <Compile Include="Models\ROFLCopter.cs" />
     <Compile Include="Models\Settings.cs" />
